Fixing button spacing and hero image dimensions for page header.

--- a/src/assets/css/components/_page_header.scss
+++ b/src/assets/css/components/_page_header.scss
@@ -14,7 +14,13 @@
     color: $headerheadingfontcolor;
     font-family: $headerheadingfontfamily;
     text-align: center;
-    margin-bottom: 2px;
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: $screen-xl-min) {
+  .page-header {
+    height: 70vh
   }
 }
 
@@ -48,14 +54,24 @@
 
 .btn-header-container {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
 }
 
 .btn-header-container a:first-child {
+  min-width: 120px;
   margin-right: 1em;
+
+  @media screen and (min-width: $screen-sm-min) {
+    margin-right: 2em;
+  }
 }
 
 .btn-header-container a:last-child {
+  min-width: 120px;
   margin-left: 1em;
+  
+  @media screen and (min-width: $screen-sm-min) {
+    margin-left: 2em;
+  }
 }
 
