--- a/src/assets/css/pages/_about.scss
+++ b/src/assets/css/pages/_about.scss
@@ -6,6 +6,10 @@
   background: url('../../images/unsplash/about-temp.jpg');
   background-position: center;
   background-size: cover;
+
+  h1 {
+    margin-bottom: 1em;
+  }
 }
 
 .bio {
